--- a/src/sass/base.scss
+++ b/src/sass/base.scss
@@ -7,3 +7,11 @@ body {
   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
   font-size: 14px;
 }
+
+a {
+  text-decoration: none;
+}
+
+li {
+  list-style: none;
+}
