--- a/src/sass/base.scss
+++ b/src/sass/base.scss
@@ -4,7 +4,7 @@
 }
 
 body {
-  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-family: 'Ubuntu', sans-serif;
   font-size: 14px;
 }
 
